# Torus

./: .gitignore  Cargo.toml  README.md
Game/ProjectSettings/: ProjectSettings.asset
Resources/Blender/: inner_room.blend  inner_room.blend1
Tools/: sg_devBuild.py
Utor/: Cargo.toml  README.md
Utor/assets/: config.toml
Utor/src/: bounding_box.rs  box_collider.rs  export.rs  grid.rs  growable_box.rs  lib.rs  maths.rs  mesh.rs  mesh_modifier.rs  parse.rs  primatives.rs  torus_modifier.rs
Utor/src/filters/: mod.rs  torus_modifier.rs
Utor/src/geom/: arc.rs  growable_box.rs  mod.rs  module_pos.rs  ring_pos.rs  torus.rs  torus_segment.rs
Utor/src/station/: config.rs  mod.rs  module.rs  ring_space.rs  room.rs  room_factory.rs  station.rs  wing.rs
Utor/src/station/generation/: marching.rs  mod.rs  module_map.rs  room_factory.rs
Vtor/: Cargo.toml
Vtor/assets/: World.toml
Vtor/src/: lib.rs
blender/: inner_room.blend  inner_room.blend1  station_mockup.blend
station_gen/: Cargo.toml
station_gen/assets/: module.mtl
station_gen/src/: error.rs  export.rs  lexer.rs  lib.rs  mesh.rs  parse.rs  primatives.rs
tools/: sg_devBuild.py  station_gen_build.py
torus/ProjectSettings/: ProjectSettings.asset
torus/Temp/: UnityTempFile-001a4f588c44c211ba0bac8b664a1c6d  UnityTempFile-0098f35fb7d46988980d26b31db44249  UnityTempFile-15e8cc9775eee24b38fc2f7cf5985f51  UnityTempFile-18295644191e8dd11a9753b98ac3773f  UnityTempFile-1a71d2f11035303628cf0cfecc75b458  UnityTempFile-1f5f7840841cf2990907c2c7589f8769  (+81 more)
vtor/: Cargo.toml
vtor/assets/: World.toml
(+68 files in other folders)
