[package]
name = "Utor"
version = "0.1.0"
authors = ["fishykins <caspar.m.green@gmail.com>"]
edition = "2018"

[lib]
name = "utor" # the name of the library that will be generated
crate-type = ["dylib"]

[dependencies]
vek = "0.12.0"
num = "0.3.0"
obj-rs = "0.6.1"
noise = "0.6.0"
rand = "0.7.3"
ordered-float = "2.0.0"